More layout work, design changes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,52 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  overflow-x: hidden;
+}
+
+
+@keyframes Blink {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+.blink {
+  animation: Blink 1s infinite ease;
+}
+
+.stamp {
+  position: relative;
+  box-shadow:inset 0px 0px 0px 6px #F42424;
+}
+
+.distress {
+  position: relative;
+}
+
+.stamp:after, .distress:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../public/images/noise.jpg");
+  mix-blend-mode: lighten;
+}
+
+@layer utilities {
+  .glow {
+    @apply shadow-[0px_0px_200px_0px_rgba(94,158,94,0.35)];
+  }
+}
